# TopMine

./: CMakeLists.txt  README.md
include/: batch.h  batch_processor.h  collection_processor.h  collocations_processor.h  common.h  heap.h  parameters.h  scoring_processor.h  spinlock.h  thread_safe_collocation_start_indices.h  thread_safe_counters.h  thread_safe_dictionary.h  token_counters_processor.h  topmine_impl.h  utils.h
src/: batch.cc  collection_processor.cc  collocations_processor.cc  heap.cc  scoring_processor.cc  spinlock.cc  thread_safe_collocation_start_indices.cc  thread_safe_counters.cc  thread_safe_dictionary.cc  token_counters_processor.cc  topmine.cc  topmine_impl.cc  utils.cc
tests/: topmine_tests.cc
tests/test_data/: test_data.txt
utils/: check_code_style.sh  cpplint_files.txt
